Fix sticky header by modifying overflow and add YCPS link

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,7 +47,7 @@ html[data-theme="dark"] {
 }
 
 html, body {
-  overflow-x: hidden;
+  overflow-x: clip;
   max-width: 100%;
   margin: 0;
   padding: 0;
